--- a/src/App.css
+++ b/src/App.css
@@ -1,11 +1,10 @@
-#root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
-  
-height: 100vh;
-width: 100vw;
+* {
+  margin: 0%;
+  padding: 0%;
+  box-sizing: border-box;
+  }
+html,
+body {
+  height: 100%;
+  width: 100%;
 }
-
-
